k8s.yaml
---
#########################################################
# Service for Moleculer API Gateway service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  selector:
    app: api
  ports:
  - port: 3000
    targetPort: 3000

---
#########################################################
# API Gateway service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
spec:
  selector:
    matchLabels:
      app: api
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: moleculer/demo:2.2.0
        livenessProbe:
          httpGet:
            path: /live
            port: 3001      
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001      
      terminationGracePeriodSeconds: 5
---
#########################################################
# Greeter service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter
spec:
  selector:
    matchLabels:
      app: greeter
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: greeter
    spec:
      containers:
      - name: greeter
        image: moleculer/demo:2.2.0
        livenessProbe:
          httpGet:
            path: /live
            port: 3001      
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001      
      terminationGracePeriodSeconds: 5

---
#########################################################
# Calc service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: calc
spec:
  selector:
    matchLabels:
      app: calc
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
      - name: calc
        image: moleculer/demo:2.2.0
        livenessProbe:
          httpGet:
            path: /live
            port: 3001      
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001      
        resources:
          requests:
            cpu: 500m
      terminationGracePeriodSeconds: 5

---
#########################################################
# Products service
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: products
spec:
  selector:
    matchLabels:
      app: products
  replicas: 2
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: products
    spec:
      containers:
      - name: products
        image: moleculer/demo:2.2.0
        livenessProbe:
          httpGet:
            path: /live
            port: 3001      
        readinessProbe:
          httpGet:
            path: /ready
            port: 3001      
      terminationGracePeriodSeconds: 5

---
#########################################################
# NATS transporter service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: nats
spec:
  selector:
    app: nats
  ports:
  - port: 4222
    name: nats
    targetPort: 4222

---
#########################################################
# NATS transporter
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nats
spec:
  selector:
    matchLabels:
      app: nats
  replicas: 1
  strategy:
    type: Recreate  
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: nats
    spec:
      containers:
      - name: nats
        image: nats
        ports:
        - containerPort: 4222
          name: nats

---
#########################################################
# Redis service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: redis
spec:
  selector:
    app: redis
  ports:
  - port: 6379
    name: redis
    targetPort: 6379

---
#########################################################
# Redis transporter
#########################################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
spec:
  selector:
    matchLabels:
      app: redis
  replicas: 1
  strategy:
    type: Recreate  
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - name: redis
        image: redis
        ports:
        - containerPort: 6379
          name: redis

---
#########################################################
# Mongo database
#########################################################
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  selector:
    matchLabels:
      app: mongo
  replicas: 1
  serviceName: mongo
  template:
    metadata:
      labels:
        app: mongo
    spec:
      containers:
        - image: mongo
          name: mongo
          ports:
            - containerPort: 27017
          resources: {}
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongo-data
      terminationGracePeriodSeconds: 5

---
#########################################################
# Mongo database service
#########################################################
apiVersion: v1
kind: Service
metadata:
  name: mongo
  labels:
    app: mongo
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
